[gd_scene load_steps=2 format=3 uid="uid://bkho8e2l80cbm"]

[ext_resource type="Script" uid="uid://ceif2a36y5g1" path="res://src/ui/menu/widget/key_bind_button.gd" id="1_6ax5m"]

[node name="KeyBindButton" type="Button" groups=["key_bind_button", "menu_option"]]
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 3
autowrap_mode = 3
script = ExtResource("1_6ax5m")

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
